--- a/moliere.css
+++ b/moliere.css
@@ -63,3 +63,7 @@ th {border: solid 1px ;text-align: center;padding-left: 50px;margin: 100px 13em 
 td{border: solid 1px ;text-align: center;padding-left: 50px;margin: 100px 13em 15pt 10%;}
 tr:nth-child(even) {background-color: rgb(49, 203, 214);}
 tr:nth-child(odd) {background-color: #a9f1eb;}
+
+div{
+    background-color: beige;
+}
